--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,12 @@
-<div class="row">
-    <div class="col-xs-12">
+
+<div class="container login-container">
+    <div class="row">
+    <div class="col-lg-12">
         <h4>Use One of the following Accounts to login </h4>
     </div>
 </div>   
 <div class="row login-row">
-    <div class="col-xs-3">
+    <div class="col-lg-4">
         <!-- GOOGLE PLUS SIGN IN BUTTON-->
         <div id="signInButton">
             <span class="g-signin"
@@ -19,11 +21,40 @@
         </div>
         <!--END GOOGLE PLUS SIGN IN BUTTON --></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-lg-4">
         facebook
     </div>
-    <div class="col-xs-6">
+    <div class="col-lg-4">
         <a href="{{url_for('admin_login')}}" class="btn btn-primary "><i class="fa fa-user-secret large-icon"></i> Administrator</a>
     </div>
 </div>
 <div id="result"></div>
+</div>
+<script>
+function signInCallback(authResult) {
+if (authResult['code']) {
+// Hide the sign-in button now that the user is authorized
+$('#signinButton').attr('style', 'display: none');
+// Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+$.ajax({
+type: 'POST',
+url: '/gconnect?state={{STATE}}',
+processData: false,
+data: authResult['code'],
+contentType: 'application/octet-stream; charset=utf-8',
+success: function(result) {
+// Handle or verify the server response if necessary.
+if (result) {
+$('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+setTimeout(function() {
+window.location.href = "/shelters";
+}, 4000);
+
+} else if (authResult['error']) {
+console.log('There was an error: ' + authResult['error']);
+} else {
+$('#result').html('Failed to make a server-side call. Check your configuration and console.');
+}
+}
+
+}); } }</script>
