--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,15 +1,17 @@
 {% from "form_helper.html" import render_field %}
+<div class="container login-form-container">
 <form method='post' action="{{url_for('admin_login')}}">
     {{ render_field(form.email) }}
     {{ render_field(form.password) }}
     <div class="row">
-        <div class="col-xs-5"></div>
-        <div class="col-xs-1">
+        <div class="col-lg-5"></div>
+        <div class="col-lg-1">
             <a href="" class="btn btn-default back-btn"><i class="fa fa-chevron-left"></i> Back</a>
         </div>
-        <div class="col-xs-1">
+        <div class="col-lg-1">
              <input type='submit' value='Login' class="btn btn-primary">
         </div>
-        <div class="col-xs-5"></div>
+        <div class="col-lg-5"></div>
     </div>
 </form>
+</div>
