--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -1,50 +1,48 @@
-<div class="row">
-    <div class='col-xs-6 heading'><h1> All Categories </h1></div>
-    <div class="col-xs-6 v-middle">{% if isSomeoneLoggedIn()  %}
-        <a class='btn btn-primary' href ='{{url_for("new_category")}}' ><i class="fa fa-plus"></i> Add New Category </a>
-        {%else%}
-        <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Category </a>
-    {% endif %}
+<div class="container cat-container">
+    <div class="row">
+        <div class='col-md-6 heading'><h3> All Categories </h3></div>
+        <div class="col-md-6  align-right"><p>{% if isSomeoneLoggedIn()  %}
+            <a class='btn btn-primary' href ='{{url_for("new_category")}}' ><i class="fa fa-plus"></i> Add New Category </a>
+            {%else%}
+            <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Category </a>
+        {% endif %}</p>
+    </div>
 </div>
-</div>
 <div class="row">
-<div class='col-xs-1 header-el'>ID</div>
-<div class='col-xs-2 header-el'> Name </div>
-<div class="col-xs-1 header-el"> Parent Category Id</div>
-<div class='col-xs-1 header-el'> Active </div>
-<div class='col-xs-1 header-el'>Has Sub-Categories</div>
-<div class='col-xs-2 header-el'>Created</div>
-
-<div class='col-xs-4 header-el'>{% if isAdminLoggedIn()  %} Action {% endif %}</div>
+    <div class='col-md-2 header-el'> Name </div>
+    <div class="col-md-2 header-el"> Parent Category Id</div>
+    <div class='col-md-1 header-el'> Active </div>
+    <div class='col-md-1 header-el'>isParent?</div>
+    <div class='col-md-2 header-el'>Created</div>
+    <div class='col-md-4 header-el'>Action(s)</div>
 </div>
 <hr />
 {%for category in categories %}
-<div class="row {%if not category.isActive %} disabled {%endif%}">
-<div class='col-xs-1'>{{category.id}}</div>
-<div class='col-xs-2 {% if category.hasChildren %} bold  {%endif%}'>{{category.name}}</div>
-<div class="col-xs-1">{{category.parent}}</div>
-<div class='col-xs-1'>{% if category.isActive%}<i class="fa fa-check text-success"></i>{%else%}<i class="fa fa-ban text-danger"></i>{%endif%}</div>
-<div class='col-xs-1'>{{category.hasChildren}}</div>
-<div class='col-xs-2'><span class="bold">Created: </span>{{category.created.strftime("%b %d, %Y %H:%M")}}
-{% if category.lastupdated%}
-    </br>
-    <span class="bold">Last updated: </span> {{category.lastupdated.strftime("%b %d, %Y %H:%M")}}
-{%endif%}</div>
-
-{% if isAdminLoggedIn() and category.id > 0 %}
-    <div class='col-xs-2 v-middle'>
-        <a class='btn btn-primary' href ='{{url_for("new_category",categoryId=category.id)}}' ><i class="fa fa-pencil"></i> Edit</a>
-    </div>
-    <div class='col-xs-2 v-middle'>
-        <a class='btn btn-danger' href ='{{url_for("delete_category")}}' ><i class="fa fa-trash-o"></i> Delete</a>
-    </div>
-{% else %}
-    <div class='col-xs-2 v-middle'>
-        <a class='btn btn-primary disabled' href ='' alt="Login to Edit" ><i class="fa fa-pencil"></i> Edit</a>
-    </div>
-    <div class='col-xs-2 v-middle'>
-        <a class='btn btn-danger disabled' href ='' alt="Login to Delete"><i class="fa fa-trash-o"></i> Delete</a>
-    </div>
-{% endif %}
+<div class="row {%if not category.isActive %} disabled {%endif%} cat-row">
+    <div class='col-md-2 {% if category.hasChildren %} bold  {%endif%}'>{{category.name}}</div>
+    <div class="col-md-2">{%if category.parent  %}{{get_category_name(category.parent)}} {%else%} --- {%endif%}</div>
+    <div class='col-md-1'>{% if category.isActive%}<i class="fa fa-check text-success"></i>{%else%}<i class="fa fa-ban text-danger"></i>{%endif%}</div>
+    <div class='col-md-1'>{% if category.hasChildren%}<i class="fa fa-check text-success"></i>{%else%}<i class="fa fa-ban text-danger"></i>{%endif%}</div>
+    <div class='col-md-2'><span class="bold">Created: </span>{{category.created.strftime("%b %d, %Y %H:%M")}}
+    {% if category.lastupdated%}
+        </br>
+        <span class="bold">Last updated: </span> {{category.lastupdated.strftime("%b %d, %Y %H:%M")}}
+    {%endif%}</div>
+    {% if isAdminLoggedIn() and category.id > 0 %}
+        <div class='col-md-2  align-right'>
+            <a class='btn btn-primary' href ='{{url_for("new_category",categoryId=category.id)}}' ><i class="fa fa-pencil"></i> Edit</a>
+        </div>
+        <div class='col-md-2  align-right'>
+            <a class='btn btn-danger' href ='{{url_for("delete_category")}}' ><i class="fa fa-trash-o"></i> Delete</a>
+        </div>
+    {% else %}
+        <div class='col-md-2  align-right'>
+            <a class='btn btn-primary disabled' href ='' alt="Login to Edit" ><i class="fa fa-pencil"></i> Edit</a>
+        </div>
+        <div class='col-md-2  align-right'>
+            <a class='btn btn-danger disabled' href ='' alt="Login to Delete"><i class="fa fa-trash-o"></i> Delete</a>
+        </div>
+    {% endif %}
 </div>
 {% endfor %}
+</div>
