--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,21 @@
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript">
-  window.jQuery || document.write('<script src="{{url_for('static', filename='js/lib/jquery-1.11.3.min.js')}}"><\/script>');
-</script>
+<!-- FOOTER -->
+<footer >
+<div class="container">
+	<p class="pull-right"><a href="#">Back to top</a></p>
+	<p>&copy; 2015 Sams Catalog Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</div>
+</footer>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>
+	var jqurl= "{{url_for('static' ,filename='js/lib/vendor/jquery.min.js')}}";
+window.jQuery || document.write('<script src="'+ jqurl+'"><\/script>')</script>
+<script src="{{url_for('static',filename='js/lib/bootstrap.min.js')}}"></script>
+<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+<script src="{{url_for('static',filename='js/lib/vendor/holder.min.js')}}"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="{{url_for('static',filename='js/lib/ie10-viewport-bug-workaround.js')}}"></script>
 <script type="text/javascript" src="{{url_for('static', filename='js/global.js')}}"></script>
 </body></html>
