--- a/templates/form_helper.html
+++ b/templates/form_helper.html
@@ -3,8 +3,8 @@
   {{ field(**kwargs)|safe }}
 {% else %}
 <div class="row">
-  <div class="col-xs-3 form-label">{{ field.label }}</div>
-  <div class="col-xs-4">{{ field(**kwargs)|safe }}
+  <div class="col-md-3 form-label">{{ field.label }}</div>
+  <div class="col-md-7">{{ field(**kwargs)|safe }}
     {% if field.errors %}
     <ul class="form-error">
     {% for error in field.errors %}
@@ -13,7 +13,7 @@
     </ul>
   {% endif %}
   </div>
-  <div class="col-xs-5">
+  <div class="col-md-2">
    </div>
 </div>
 {% endif %}
