--- a/templates/pages_list.html
+++ b/templates/pages_list.html
@@ -1,5 +1,6 @@
+<div class="container">
 <div class="row">
-<div class='col-xs-12 align-center'>
+<div class='col-xs-12 align-right'>
     <div class=pagination>
         {% if pagination.hasPagesBefore %}
             <a href="{{ other_page_urls(pagination.current_page - 1)
@@ -21,5 +22,6 @@
             }}" class="btn btn-primary"><i class="fa fa-chevron-right"></i></a>
         {% endif %}
     </div>
+</div>
 </div>
 </div>
