adding documentation  other url changes formatting and code cleanup

--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,5 +1,5 @@
 {% from "form_helper.html" import render_field %}
-<div class="container login-form-container">
+<div class="container item-form">
 <form method='post' action="{{url_for('admin_login')}}">
     {{ render_field(form.email) }}
     {{ render_field(form.password) }}
