--- a/templates/slides_helper.html
+++ b/templates/slides_helper.html
@@ -9,7 +9,7 @@
 			<p> </p>
 			<p><a class="btn btn-lg btn-primary" href="{{url_for('category_item',
 				category_name=format_name_for_url(get_category_name(item.category_id)) ,
-			item_name=format_name_for_url(item.name) )}}" role="button">View Item</a>  <a class="btn btn-lg btn-default" href="{{url_for('category_listings', category_name=format_name_for_url(get_category_name(item.category_id))) }}" role="button">View All Under - {{get_category_name(item.category_id)}}</a> </p>
+			item_name=format_name_for_url(item.name), item_id=item.id  )}}" role="button">View Item</a>  <a class="btn btn-lg btn-default" href="{{url_for('category_listings', category_name=format_name_for_url(get_category_name(item.category_id))) }}" role="button">View All Under - {{get_category_name(item.category_id)}}</a> </p>
 		</div>
 	</div>
 </div>
