--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,13 +48,13 @@ i.large-icon {
 
 .navbar-inverse .navbar-nav>li>a {
     color: #EEE;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .navbar-inverse .navbar-nav>li {
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>li:hover {
@@ -127,8 +127,10 @@ i.large-icon {
 .catalog-item {
     min-height: 300px;
     padding: 10px;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    border-right: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .catalog-item .item-name {
@@ -142,6 +144,10 @@ i.large-icon {
     box-shadow: 2px 2px 5px 1px #666;
 }
 
+.catalog-item > img.img-circle {
+    margin-left: 60px;
+}
+
 .login-row .login-item {
     min-height: 300px;
     padding: 10px;
@@ -149,8 +155,8 @@ i.large-icon {
     width: calc(25% - 1%);
     border: 1px solid #ddd;
     margin: 2px;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
     text-align: center;
 }
 
@@ -194,8 +200,8 @@ ul {
 
 ul.left-nav-ul li.left-nav-item {
     padding: 10px 10px;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 ul.left-nav-ul li.left-nav-item:hover {
@@ -203,9 +209,14 @@ ul.left-nav-ul li.left-nav-item:hover {
     box-shadow: 2px 2px 5px 1px #666;
 }
 
+ul.left-nav-ul li.left-nav-item.active{
+    background-color: #eee;
+    box-shadow: 2px 2px 5px 1px #666;
+}
+
 ul.left-nav-ul {
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
     opacity: 1;
     height: auto;
 }
@@ -215,12 +226,27 @@ ul.left-nav-ul.hide-element {
     opacity: 0;
     display: none;
 }
+.left-nav-trigger{
+    background-color: #337ab7;
+    padding: 5px;
+    color:#fff;
+    margin-bottom: 10px;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+
+}
+.left-nav-trigger:hover{
+    background-color: #3E6485;
+}
+.left-nav-trigger > span.nav-parent-icon i{
+    color:;
+}
 
 .cat-container .row.cat-row, .items-container .row.item-row, .container.item-form .row, .container.users-container .row.user-row {
     z-index: auto;
     padding: 10px;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .cat-container .row.cat-row:hover, .items-container .row.item-row:hover .users-container .row.user-row:hover {
@@ -311,15 +337,18 @@ img.item-pic-large {
     min-height: 100px;
     overflow: auto;
 }
-.nav-end{
-    min-width:50px;
+
+.nav-end {
+    min-width: 50px;
 }
+
 .user-image img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     border: 1px solid transparent;
 }
+
 .adminuser {
     width: 40px;
     height: 40px;
@@ -332,11 +361,19 @@ img.item-pic-large {
 .adminuser i {
     font-size: 27px;
 }
-.user-name{
-    padding-top:10px;
-    padding-left:5px;
+
+.user-name {
+    padding-top: 10px;
+    padding-left: 5px;
 }
 
+.del-cat-msg {
+    padding: 10px;
+}
+
+.row.item-actions{
+    padding:5px;
+}
 /* .header-el {
     text-align: center;
     font-weight: bold;
@@ -455,8 +492,8 @@ img.item-pic-large {
     padding: 10px;
     margin-left: 5px;
     border: 1px solid #ddd;
-    -webkit-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 .catalog-item:hover {
