--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -1,25 +1,25 @@
 <div class="container items-container">
-<div class="row">
-    <div class='col-md-6 heading'><h3> All Items </h3></div>
-    <div class="col-md-6 align-right">
-        {% if isSomeoneLoggedIn()  %}
-        <a class='btn btn-primary' href ='{{url_for("new_item")}}' ><i class="fa fa-plus"></i> Add New Item </a>
-        {% else %}
-            <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Item </a>
-        {% endif %}
+    <div class="row">
+        <div class='col-md-6 heading'><h3> All Items </h3></div>
+        <div class="col-md-6 align-right">
+            {% if isSomeoneLoggedIn()  %}
+                <a class='btn btn-primary' href ='{{url_for("new_item")}}' ><i class="fa fa-plus"></i> Add New Item </a>
+            {% else %}
+                <a class='btn btn-primary disabled' href ='' ><i class="fa fa-plus"></i> Add New Item </a>
+            {% endif %}
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class='col-md-3 header-el'> Item </div>
-    <div class="col-md-3 header-el"> Description </div>
-    <div class='col-md-1 header-el'> Active </div>
-    <div class='col-md-2 header-el'> Dates </div>
-    <div class='col-md-3 header-el'> Action(s) </div>
-</div>
-<hr />
-{%for item in items %}
-<div class="row item-row {%if not item.isActive %} disabled {%endif%}" >
-    <div class='col-md-3'><img src="{% if item.pictureurl %}{{item.pictureurl}} {% else %} {{url_for('static', filename='images/img-not-found.png')}} {%endif%}" class="img-circle" width="140" height="140"/><strong><p>{{item.name}}</p></strong>
+    <div class="row">
+        <div class='col-md-3 header-el'> Item </div>
+        <div class="col-md-3 header-el"> Description </div>
+        <div class='col-md-1 header-el'> Active </div>
+        <div class='col-md-2 header-el'> Dates </div>
+        <div class='col-md-3 header-el'> Action(s) </div>
+    </div>
+    <hr />
+    {%for item in items %}
+    <div class="row item-row {%if not item.isActive %} disabled {%endif%}" >
+        <div class='col-md-3'><img src="{% if item.pictureurl %}{{item.pictureurl}} {% else %} {{url_for('static', filename='images/img-not-found.png')}} {%endif%}" class="img-circle" width="140" height="140"/><strong><p>{{item.name}}</p></strong>
         <p><strong>Price Range: </strong>{{item.pricerange}}</p>
         <p><strong >Category: </strong>{{get_category_name(item.category_id)}}</p>
         <p><strong >User Id: </strong>{{item.user_id}}</p>
@@ -30,26 +30,45 @@
     {% if item.lastupdated%}</p>
     <p>        <strong >Last updated: </strong> {{item.lastupdated.strftime("%b %d, %Y %H:%M")}} </p>
     {%endif%}
-    </div>
-    {% if not isSomeoneLoggedIn() or not verifyOwnerLogin(item.user_id) %}
-        <div class='col-md-1 v-middle'>
+</div>
+{% if not isSomeoneLoggedIn() or not verifyOwnerLogin(item.user_id) %}
+    <div class='col-md-3 v-middle'>
+        <div class="row item-actions">
+            
+            <a class="btn btn-default" href="{{url_for('category_item',
+                category_name=format_name_for_url(get_category_name(item.category_id)) ,
+            item_name=format_name_for_url(item.name), item_id=item.id  )}}" role="button">View Item</a>
+        </div>
+        <div class="row item-actions">
             <a class='btn btn-primary disabled' href ='' ><i class="fa fa-pencil"></i> Edit</a>
+            
         </div>
-        <div class='col-md-1 v-middle'>    
+        <div class="row item-actions">
             <a class='btn btn-danger disabled' href ='' ><i class="fa fa-trash-o"></i> Delete</a>
+            
         </div>
-          <div class='col-md-1 v-middle'>    
-        </div>
-    {% else %}
-         <div class='col-md-1 v-middle'>
-            <a class='btn btn-primary ' href ='{{url_for("new_item", item_id=item.id)}}' ><i class="fa fa-pencil"></i> Edit</a>
-        </div>
-        <div class='col-md-1 v-middle'>    
-            <a class='btn btn-danger ' href ='{{url_for("confirm_delete",delete_type="items", delete_key=item.id)}}' ><i class="fa fa-trash-o"></i> Delete</a>
-        </div>
-          <div class='col-md-1 v-middle'>    
-        </div>
-    {% endif %}
+    </div>
+{% else %}
+
+<div class='col-md-3 v-middle'>
+    <div class="row item-actions">
+        
+        <a class="btn btn-default" href="{{url_for('category_item',
+            category_name=format_name_for_url(get_category_name(item.category_id)) ,
+        item_name=format_name_for_url(item.name), item_id=item.id  )}}" role="button">View Item</a>
+    </div>
+    <div class="row item-actions">
+        <a class='btn btn-primary ' href ='{{url_for("new_item", item_id=item.id)}}' ><i class="fa fa-pencil"></i> Edit</a>
+        
+    </div>
+    <div class="row item-actions">
+        <a class='btn btn-danger ' href ='{{url_for("confirm_delete",delete_type="items", delete_key=item.id)}}' ><i class="fa fa-trash-o"></i> Delete</a>
+        
+    </div>
+    
+</div>
+
+{% endif %}
 </div>
 {% endfor %}
 </div>
