--- a/templates/header.html
+++ b/templates/header.html
@@ -27,6 +27,7 @@
 		
 	</head>
 	<body >
+		<div id="backtotop"></div>
 		<div class="navbar-wrapper">
 			<div class="container">
 				<nav class="navbar navbar-inverse navbar-static-top">
