fixed the comment issue that was stopping the page from loading

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,9 +26,9 @@
     <div class="col-md-3 login-item ">
         <div class="img-circle blue" ><i class="fa fa-facebook-square"></i></div>
         <h4 class="push-down">Login With Facebook Account</h4>
-         <p>Coming Soon!</p>   
-       <p> <!-- <a href="{{url_for('facebook_login')}}" class="btn btn-primary "><i class="fa fa-facebook-square large-icon"></i></i> Facebook</a> -->
-        <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" on-login="statusChangeCallback" data-scope="public_profile,email"></div>
+         <p>Login with Facebook Account!</p>   
+       <p> 
+            <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" on-login="statusChangeCallback" data-scope="public_profile,email"></div>
        </p>
     </div>
      <div class="col-md-3 login-item">
