updated the application name

--- a/templates/loginheader.html
+++ b/templates/loginheader.html
@@ -19,7 +19,7 @@
 					<div class="col-xs-3">
 						<div class="navbar-header">
 							
-							<a href='{{url_for("catalog")}}' class="navbar-brand">Sams Item Catalog</a>
+							<a href='{{url_for("catalog")}}' class="navbar-brand">Sams Catalog App</a>
 						</div>
 					</div>
 					<div class="col-xs-4">
