--- a/templates/header.html
+++ b/templates/header.html
@@ -39,7 +39,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							</button>
-							<a href='{{url_for("catalog")}}' class="navbar-brand">Sams Item Catalog</a>
+							<a href='{{url_for("catalog")}}' class="navbar-brand">Sams Catalog App</a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
